--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".Lista"
+            android:name=".InsertarActividad"
             android:exported="false" />
         <activity
             android:name=".Felicitaciones"
@@ -25,9 +25,6 @@
             android:exported="false" />
         <activity
             android:name=".ListCreateActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Register"
             android:exported="false" />
         <activity
             android:name=".Login"
